[package]
name = "tp-1-and-2"
version = "0.1.0"
authors = ["Mikkel ALMONTE--RINGAUD"]
description = "Module contenant ma résolution du TP 1 et 2."
edition = "2021"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
clio = { version = "0.3.5", features = ["clap-parse"] }
gcd = "2.3.0"
